@@ -7,6 +7,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.ModelAndView;
 
@@ -22,7 +23,7 @@ public class RecipeController {
 
     @RequestMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
-        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
         return "recipe/show";
     }
 
@@ -33,8 +34,14 @@ public class RecipeController {
     }
 
     @PostMapping("/recipe")
-    public String saveUpdateRecipe(@ModelAttribute RecipeCommand recipeCommand){
+    public String saveUpdateRecipe(@ModelAttribute("recipe") RecipeCommand recipeCommand, BindingResult result){
 
+        if(result.hasErrors())
+        {
+            result.getAllErrors().forEach(objectError -> log.debug(objectError.toString()));
+
+            return "recipe/recipeform";
+        }
         RecipeCommand savedCommand = recipeService.saveRecipeCommand(recipeCommand);
 
         return "redirect:/recipe/" + savedCommand.getId() +"/show/";
